Make RenderWidgetHostImpl's clock switchable for testing.

BUG=823087
TEST=none yet

Change-Id: I5c3c57fb380b2d7ec863d43b2e317f634ed40e5b
Reviewed-on: https://chromium-review.googlesource.com/973899
Reviewed-by: Will Harris <wfh@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544856}